--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
   <!-- Custom styles for this template-->
   <link href="/static/css/sb-admin-2.css" rel="stylesheet">
   <link rel="stylesheet" href="/static/css/ostk.css">
+    <link href="/static/css/prism.css" rel="stylesheet" />
 
 </head>
 
@@ -53,7 +54,7 @@
                         </div>
                             <div class="form-group">
                             <label for="result">results</label>
-                            <textarea class="form-control" id="result" rows="8"></textarea>
+                                <pre><code class="language-json" id="result"></code></pre>
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
@@ -107,6 +108,9 @@
   <!-- yaqulator -->
   <script src="/static/js/js-yaml.js"></script>
   <script src="/static/js/yaqluator.js"></script>
+
+  <!-- prism -->
+  <script src="/static/js/prism.js"></script>
 
 </body>
 
